tests/snapshots/oracle__oracle_blocks.snap
---
source: tests/oracle.rs
expression: report
---
agreement: 51/59 skeleton lines (86.4%)
(- org-ssg, + emacs)

  <h2>
  "Quote"
  </h2>
  <blockquote>
  <p>
  "A quoted paragraph with"
- <em>
+ <i>
  "markup"
- </em>
+ </i>
  "."
  </p>
  <p>
  "And a second paragraph."
  </p>
  </blockquote>
  <h2>
  "Center"
  </h2>
  <p>
  "Centred text."
  </p>
  <h2>
  "Example"
  </h2>
  <pre>
  "Verbatim *not bold* text. Indentation preserved."
  </pre>
  <h2>
  "Export"
  </h2>
  <aside>
  "Raw HTML passes through."
  </aside>
  <h2>
  "Source"
  </h2>
  <pre>
- <code>
  "def greet(name): return f\"hello {name}\""
- </code>
  </pre>
  <pre>
- <code>
  "plain block, no language"
- </code>
  </pre>
  <h2>
  "Nested"
  </h2>
  <blockquote>
  <p>
  "A quote containing a source block:"
  </p>
  <pre>
- <code>
  "echo hi"
- </code>
  </pre>
  </blockquote>
