tests/snapshots/oracle__oracle_core.snap
---
source: tests/oracle.rs
expression: report
---
agreement: 51/58 skeleton lines (87.9%)
deliberate: 7 line(s) — list-per-bullet-type ×2, pre-code ×2, semantic-emphasis ×2
unexplained: 0 line(s)
(- org-ssg, + emacs, ~ a difference we mean to have)

  <p>
  "Intro paragraph with a bare URL"
  <a href="https://example.com">
  "https://example.com"
  </a>
  "and some"
  <code>
  "inline code"
  </code>
  "."
  </p>
  <h2>
  "Ordered and checked"
  </h2>
  <ol>
  <li>
  "first item"
  </li>
  <li>
  "second item with"
~ semantic-emphasis (1 line(s))
  "emphasis"
~ semantic-emphasis (1 line(s))
  </li>
~ list-per-bullet-type (2 line(s))
  <li>
  <code>
  "[ ]"
  </code>
  "todo item"
  </li>
  <li>
  <code>
  "[X]"
  </code>
  "done item"
  </li>
~ list-per-bullet-type (1 line(s))
  <h2>
  "Links and code"
  </h2>
  <p>
  "An external"
  <a href="https://example.org">
  "site"
  </a>
  "and a bare"
  <a href="https://bare.example">
  "https://bare.example"
  </a>
  "."
  </p>
  <pre>
~ pre-code (1 line(s))
  "fn main() { println!(\"hello\"); }"
~ pre-code (1 line(s))
  </pre>
