tests/snapshots/oracle__oracle_elements.snap
---
source: tests/oracle.rs
expression: report
---
agreement: 64/82 skeleton lines (78.0%)
deliberate: 26 line(s) — footnote-anchor-naming ×1, footnote-section-shape ×2, id-link-resolution ×1, no-colgroup ×1, pre-code ×2
unexplained: 0 line(s)
(- orgo, + emacs, ~ a difference we mean to have)

  <h2>
  "Code and tables"
  </h2>
  <pre>
~ pre-code (1 line(s))
  "fn main() { println!(\"hello\"); }"
~ pre-code (1 line(s))
  </pre>
  <table>
~ no-colgroup (4 line(s))
  <thead>
  <tr>
  <th>
  "Name"
  </th>
  <th>
  "Score"
  </th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td>
  "alpha"
  </td>
  <td>
  "10"
  </td>
  </tr>
  <tr>
  <td>
  "beta"
  </td>
  <td>
  "20"
  </td>
  </tr>
  </tbody>
  </table>
  <h2>
  "Links and footnotes"
  </h2>
  <p>
  "An external link:"
  <a href="https://example.com">
  "Example"
  </a>
~ id-link-resolution (5 line(s))
  </p>
  <p>
  "Text with a footnote reference."
  <sup>
~ footnote-anchor-naming (1 line(s))
  "1"
  </a>
  </sup>
  </p>
  <h2>
  "Blocks"
  </h2>
  <blockquote>
  <p>
  "A quoted paragraph."
  </p>
  </blockquote>
  <hr>
~ footnote-section-shape (8 line(s))
  <p>
  "The footnote definition."
  </p>
~ footnote-section-shape (6 line(s))
