tests/snapshots/oracle__oracle_headings.snap
---
source: tests/oracle.rs
expression: report
---
agreement: 28/30 skeleton lines (93.3%)
deliberate: 2 line(s) — semantic-time ×2
unexplained: 0 line(s)
(- org-ssg, + emacs, ~ a difference we mean to have)

  <h2>
~ semantic-time (1 line(s))
  </h2>
  <p>
  "A heading carrying a keyword, a priority, tags and a property drawer."
  </p>
  <h3>
  "DONE Nested and finished"
  </h3>
  <p>
  "Sub-headings nest by star count."
  </p>
  <h3>
~ semantic-time (1 line(s))
  </h3>
  <p>
  "A priority cookie can stand alone."
  </p>
  <h2>
  "TODOs are not a keyword"
  </h2>
  <p>
  "The word boundary matters: this heading has no TODO keyword."
  </p>
  <h2>
  "DONE"
  </h2>
  <p>
  "A keyword with no title at all."
  </p>
