tests/snapshots/oracle__oracle_images.snap
---
source: tests/oracle.rs
expression: report
---
agreement: 30/42 skeleton lines (71.4%)
(- org-ssg, + emacs)

  <h2>
  "Bare image"
  </h2>
  <p>
  <img src="diagram.png">
  </p>
  <h2>
  "Captioned figure"
  </h2>
- <figure>
+ <p>
  <img src="pipeline.svg">
- <figcaption>
+ </p>
+ <p>
  "Figure 1: The pipeline, end to end"
- </figcaption>
- </figure>
+ </p>
  <h2>
  "Caption with markup"
  </h2>
- <figure>
+ <p>
  <img src="chart.png">
- <figcaption>
+ </p>
+ <p>
  "Figure 2: A"
- <em>
+ <i>
  "stylised"
- </em>
+ </i>
  "chart"
- </figcaption>
- </figure>
+ </p>
  <h2>
  "Quoted attribute values"
  </h2>
- <figure>
+ <p>
  <img src="cat.jpg">
- </figure>
+ </p>
  <h2>
  "Image with a description is a link"
  </h2>
  <p>
  <a href="diagram.png">
  "the diagram"
  </a>
  </p>
