tests/snapshots/oracle__oracle_minimal.snap
---
source: tests/oracle.rs
expression: report
---
agreement: 38/42 skeleton lines (90.5%)
deliberate: 4 line(s) — semantic-emphasis ×4
unexplained: 0 line(s)
(- orgo, + emacs, ~ a difference we mean to have)

  <p>
  "A single paragraph of preamble text before any heading."
  </p>
  <h2>
  "First Heading"
  </h2>
  <p>
  "Some body text with"
~ semantic-emphasis (1 line(s))
  "bold"
~ semantic-emphasis (1 line(s))
  ","
~ semantic-emphasis (1 line(s))
  "italic"
~ semantic-emphasis (1 line(s))
  ", and"
  <code>
  "verbatim"
  </code>
  "."
  </p>
  <h3>
  "A Subheading tag1 tag2"
  </h3>
  <ul>
  <li>
  "an unordered item"
  </li>
  <li>
  "another with a checkbox [ ]"
  </li>
  </ul>
  <h2>
  "Second Heading"
  </h2>
  <p>
  "See"
  <a href="#first">
  "the first heading"
  </a>
  "."
  </p>
