tests/snapshots/oracle__oracle_table.snap
---
source: tests/oracle.rs
expression: report
---
agreement: 30/34 skeleton lines (88.2%)
deliberate: 4 line(s) — no-colgroup ×1
unexplained: 0 line(s)
(- org-ssg, + emacs, ~ a difference we mean to have)

  <table>
~ no-colgroup (4 line(s))
  <thead>
  <tr>
  <th>
  "Name"
  </th>
  <th>
  "Score"
  </th>
  </tr>
  </thead>
  <tbody>
  <tr>
  <td>
  "alpha"
  </td>
  <td>
  "10"
  </td>
  </tr>
  <tr>
  <td>
  "beta"
  </td>
  <td>
  "20"
  </td>
  </tr>
  </tbody>
  </table>
