tests/snapshots/oracle__oracle_timestamps.snap
---
source: tests/oracle.rs
expression: report
---
agreement: 25/62 skeleton lines (40.3%)
deliberate: 37 line(s) — semantic-time ×5
unexplained: 0 line(s)
(- orgo, + emacs, ~ a difference we mean to have)

  <h2>
  "Single"
  </h2>
  <p>
~ semantic-time (9 line(s))
  </p>
  <p>
~ semantic-time (5 line(s))
  </p>
  <h2>
  "Ranges"
  </h2>
  <p>
~ semantic-time (9 line(s))
  </p>
  <p>
~ semantic-time (9 line(s))
  </p>
  <h2>
  "Ignored decorations"
  </h2>
  <p>
~ semantic-time (5 line(s))
  </p>
  <h2>
  "Not timestamps"
  </h2>
  <p>
  "Comparisons like 3 < 4 and [not a stamp] stay literal text."
  </p>
